--- a/src/assets/aside.css
+++ b/src/assets/aside.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 body {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -18,6 +18,9 @@ body {
   margin-top: 200px;
   transition: all 0.3s linear;
   box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, .4);
+}
+.navt ul {
+  list-style: none;
 }
 .navt li {
   height: 60px;
@@ -54,6 +57,12 @@ body {
   left: 15px;
   font-size: 27px;
 }
+.navt li a svg {
+  position: absolute;
+  top: 17px;
+  left: 15px;
+  font-size: 27px;
+}
 .navt li span {
   display: none;
   font-weight: bold;
@@ -67,4 +76,11 @@ body {
 .navt li:hover span {
   padding-left: 30%;
   display: block;
+}
+
+/* Hide the navigation bar on small screens */
+@media (max-width: 1475px) {
+  .navt {
+    display: none;
+  }
 }
