--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,8 @@ html {
     width: 100%;
     align-items: center;
 }
+@media only screen and (max-width: 1024px) {
+    .nav{
+       visibility: hidden; 
+    }
+  }
